Fixed styling and alignment for active sessions

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,7 +39,6 @@ header {
   	&:hover {
   		color: #FFF;
   	}
-
 }
 
 a {
@@ -64,6 +63,10 @@ a {
  }
 
  td.user-row {
+ 	text-align: left;
+ }
+
+ td.time-cell {
  	text-align: left;
  }
 
